--- a/public/css/normalize.css
+++ b/public/css/normalize.css
@@ -1,3 +1,5 @@
+/* normalize.css - Normalização de estilos para todos os navegadores */
+
 /* Firefox (uncomment to work in Firefox, although other properties will not work!)  */
 /** {
   scrollbar-width: thin;
