--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -10,7 +10,7 @@ body {
 main {
     flex: 1 0 auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: start;
     align-items: left;
     width: 100%;
