--- a/public/assets/css/loader.css
+++ b/public/assets/css/loader.css
@@ -1,4 +1,4 @@
-#preloader {
+/* #preloader {
     position: fixed;
     top: 0;
     left: 0;
@@ -22,7 +22,7 @@
     height: 60px;
     margin: 0 auto;
     border: 3px solid #f3f3f3;
-    border-top: 3px solid #198754; /* Verde do Bootstrap */
+    border-top: 3px solid #198754; 
     border-right: 3px solid #198754;
     border-radius: 50%;
     animation: spin 1s linear infinite;
@@ -62,4 +62,4 @@ main {
 
 main.content-loaded {
     opacity: 1;
-} 
+}  */
