--- a/public/assets/css/loader.css
+++ b/public/assets/css/loader.css
@@ -1,4 +1,4 @@
-/* #preloader {
+#preloader {
     position: fixed;
     top: 0;
     left: 0;
@@ -62,4 +62,4 @@ main {
 
 main.content-loaded {
     opacity: 1;
-}  */
+} 
