--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -299,7 +299,7 @@ p {
 }
 
 .custom-shape-divider-top-1733163571 {
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
