--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -312,9 +312,9 @@ p {
     position: relative;
     display: block;
     width: calc(100% + 1.3px);
-    height: 150px;
+    height: 50px;
 }
 
 .custom-shape-divider-top-1733163571 .shape-fill {
-    fill: #FF00FF;
+    fill: #FFFFFF;
 }
